--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			<div style="width:100%;">
 			<div class="col-sm-6" style="padding:10px">
 				<label  style="width:100%">State
-				<input type="text" value="j&k" class="input-data">
+				<input type="text" value="Imphal" class="input-data">
 				</label>
 			</div>
 
